연습 파일 한 폴더로 옮기기

--- a/JS연습/index.html
+++ b/JS연습/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class= "hello">
-        <h1>grab me 1 !</h1>
+        <h1 class="sexy_font">grab me 1 !</h1>
     </div>
 
-    <script src= "app3_5.js">
+    <script src= "app3_8.js">
     </script>
 </body>
 </html>
