--- a/JS연습/index1.html
+++ b/JS연습/index1.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chrome App</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Momentum App</title>
 </head>
 <body>
-    <input tpye = "text" placeholder="Waht is your name?">
-    <button>Log In</button>
-    <script src="app.js"></script>
+    <div class= "hello">
+        <h1 class="sexy_font">grab me 1 !</h1>
+    </div>
+
+    <script src= "app3_8.js">
+    </script>
 </body>
 </html>
