--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Chrome App</title>
 </head>
 <body>
@@ -19,7 +19,10 @@
     </form>
     <h2 id ="clock">00:00</h2>
     <h1 id="greeting" class="hidden"></h1>
+    <span></span>
+    <span></span>
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
+    <script src="js/quotes.js"></script>
 </body>
 </html>
