--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
     </form>
     <h2 id ="clock">00:00</h2>
     <h1 id="greeting" class="hidden"></h1>
-    <span></span>
-    <span></span>
+    <div id="quoto">
+        <span></span>
+        <span></span>
+    </div>
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
+    <script src="js/backgound.js"></script>
 </body>
 </html>
