--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     </form>
     <h2 id ="clock">00:00</h2>
     <h1 id="greeting" class="hidden"></h1>
+    <form id="todo-form">
+        <input type="text" placeholder="Wirte a TO Do and Press Enter" required/>
+    </form>
+    <ul id="todo-list"></ul>
     <div id="quoto">
         <span></span>
         <span></span>
@@ -26,6 +30,7 @@
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
-    <script src="js/backgound.js"></script>
+    <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
 </body>
 </html>
