css 및 화면수정

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         />
         <input type ="submit" value="Log in"/>
     </form>
-    <h2 id ="clock">00:00</h2>
+    <h2 id ="clock"></h2>
     <h1 id="greeting" class="hidden"></h1>
     <form id="todo-form">
         <input type="text" placeholder="Wirte a TO Do and Press Enter" required/>
@@ -25,10 +25,12 @@
     <ul id="todo-list"></ul>
     <div id="quoto">
         <span></span>
+        <br>
         <span></span>
     </div>
     <div id ="weather">
-        <span></span>
+        <span></span><br>
+        <span></span><br>
         <span></span>
     </div>
     <script src="js/greetings.js"></script>
