--- a/index.html
+++ b/index.html
@@ -13,19 +13,18 @@
             required
             maxlength="15"
             type="text"
-            placeholder="What is your name?"
+            placeholder="이름을 입력해주세요."
         />
-        <input type ="submit" value="Log in"/>
+        <input type ="submit" value="Log in" />
     </form>
     <h2 id ="clock"></h2>
     <h1 id="greeting" class="hidden"></h1>
     <form id="todo-form">
-        <input type="text" placeholder="Wirte a TO Do and Press Enter" required/>
+        <input type="text" placeholder="오늘 할 일을 적어주세요." required/>
     </form>
     <ul id="todo-list"></ul>
     <div id="quoto">
-        <span></span>
-        <br>
+        <span></span><br>
         <span></span>
     </div>
     <div id ="weather">
@@ -33,11 +32,14 @@
         <span></span><br>
         <span></span>
     </div>
+
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
     <script src="js/weather.js"></script>
+    
+
 </body>
 </html>
